# air-synth

./: .gitignore  CMakeLists.txt  Makefile  README.md  button.cpp  imu_int.cpp  imudebug_int.cpp  index.html  main.cpp  mpu6050  mpu6050.cpp  mpu6050.h  mpu6050_class_both_x.cpp  mpu6050_class_x_variable.cpp  styles.css
.github/workflows/: blank.yml
Button/: Button.cpp  Button.h
Codes for IMU/interrupt/generating interrupts/: first-debugging.cpp  first.cpp
Codes for IMU/interrupt/organised-interrupt-pushbutton/: GPIOevent.h  MPU6050.h  MPU6050_interface-1.cpp  MPU6050_interface.cpp  gpioevent-1.cpp  gpioevent.cpp  main-1.cpp  main.cpp  newmpuinterface.cpp
Codes for IMU/threads-mahony/: MahonyAHRS.cpp  multithreadframework.cpp
ControllerEvent/: ControllerEvent.cpp  ControllerEvent.h
IMU/: MPU6050.cpp
Meghdad/: mpu-threads.cpp  thread1-FIFO.cpp
Mohammed/: AirSynth.cpp  AirSynth.h  CMakeLists.txt  MPU6050.cpp  MPU6050.h  README.md
Mohammed/include/: AirSynth.hpp  GestureDetector.hpp  MPU6050.hpp
Mohammed/src/: AirSynth.cpp  GestureDetector.cpp  MPU6050.cpp  main.cpp
Synth/: Synth.h
archived/data-interrupt/: GPIOEVENT.h  main.cpp  mpu.cpp
config/Button/: ButtonConfig.schema.json
config/IMU/: left-mpu.json  mpu.schema.json  right-mpu.json
docs/: index.html
examples/: CMakeLists.txt  Printer.cpp  Printer.h  mpu_2sensors.cpp
examples1/: GPIOEVENT.cpp  GPIOEVENT.h  MPU6050.cpp  MPU6050.h  main.cpp
include/: Config.h.in  MPU6050.h  button.h
include/Bus/: I2CBus.h
include/Button/: Button.h
include/ConfigReader/: ConfigReader.h  MPUConfigReader.h  MPUSchemaConfigReader.h
include/ControllerEvent/: ControllerEvent.h
include/IMU/: MPU6050.h  MPU6050Config.h
include/Synth/: Synth.h
mot-thr/: MPU6050.cpp  MPU6050.h  main.cpp
pb-int/: MPU6050.h  gpioevent.cpp
src/: CMakeLists.txt  main.cpp  mpu6050.cpp  mpu_2sensors.cpp
src/Bus/: I2CBus.cpp
src/Button/: Button.cpp
src/ConfigReader/: ConfigReader.cpp  MPUConfigReader.cpp  MPUSchemaConfigReader.cpp
src/ControllerEvent/: ControllerEvent.cpp
src/IMU/: MPU6050.cpp
src/Synth/: Synth.cpp
temp_files/: MahonyAHRS.h
tests/: CMakeLists.txt  build.sh  mpu6050_tests.cpp
