#add_executable(TestPrintName tests/TestPrintName.cpp)
#target_link_libraries(TestPrintName PRIVATE Formatter)

#add_executable(TestPrintAge tests/TestPrintAge.cpp)
#target_link_libraries(TestPrintAge PRIVATE Formatter)

#add_test(NAME TestPrintName COMMAND TestPrintName)
#add_test(NAME TestPrintAge COMMAND TestPrintAge)
